# tt-studio

./: .env.default  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  DIFF_DESCRIPTION.md  DOCUMENT_UPLOAD_LIMITS.md  DOCUMENT_UPLOAD_TESTING_GUIDE.md  FAQ.md  HowToRunLlama3.1-70b.md  HowToRun_vLLM_Models.md  LICENSE  RAG_GUARDRAILS_IMPLEMENTATION.md  RAG_GUARDRAILS_QUICK_START.md  RAG_TESTING_GUIDE.md  README.md  TESTING_QUICK_START.md  UPLOAD_LIMIT_CHANGES.md  VIDEO_GENERATION_IMPLEMENTATION.md  add_spdx_header.py  check_copyright_config.yaml  install.sh  llm.txt  master.sh  pyproject.toml  pytest.ini  requirements-dev.txt  run.py  setup.sh  stagewise-removal-impact-report.md  startup.sh  startup_checks.py  test1  test_agent_polling.py  test_fastapi_logs.py  test_logs_endpoint.py  test_run_cleanup.py  test_upload_limits.sh  tt-studio  tt-studio-architecture.html  (+2 more)
.github/: CODEOWNERS
.workflow_venvs/: .venv_bootstrap_uv
_runner/: artifact_manager.py  cli.py  constants.py  context.py  docker_manager.py  env_config.py  health_monitor.py  port_manager.py  preflight.py  service_manager.py  spdx.py  startup.py  utils.py
app/: .env  .env.default  README.md  docker-compose.dev-mode.yml  docker-compose.embeds-off.override.yml  docker-compose.frontend-prod.yml  docker-compose.hw.override.yml  docker-compose.prod.yml  docker-compose.tt-hardware.yml  docker-compose.yml
dev-docs/: DOCKER_SOCKET_MIGRATION.md  HowToRun_vLLM_Models.md  detailed-setup.md  launcher-terminal-design.md  model-hardware-support.md  model-interface.md  run-py-guide.md  troubleshooting.md
(+879 files in other folders)
